kubernetes/kelascendikia-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: KelasCendikia
  namespace: kelascendikia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: KelasCendikia
  template:
    metadata:
      labels:
        app: KelasCendikia
    spec:
      containers:
      - name: KelasCendikia
        image: docker.io/flazhost/kelascendikia:latest
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: authdockerhub
