kubernetes/kelascendikia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kelascendikia-service
  namespace: kelascendikia
spec:
  type: NodePort
  externalIPs:
  - 103.175.220.186
  selector:
    app: kelascendikia
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 32100
    # - name: https
    #   protocol: TCP
    #   port: 443
    #   targetPort: 3000
