kubernetes/kelascendikia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kelascendikia-ingress
  namespace: kelascendikia
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - kelascendikia.id
      secretName: kelascendikia-id-tls
    - hosts:
      - kelascendikia.com
      secretName: kelascendikia-com-tls
  rules:
  - host: kelascendikia.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kelascendikia-service
            port:
              number: 80
  - host: kelascendikia.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kelascendikia-service
            port:
              number: 80
